<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="first_app">Spotify Streamer</string>
    <string name="second_app">Scores App</string>
    <string name="third_app">Library App</string>
    <string name="fourth_app">build it bigger</string>
    <string name="fifth_app">xyz reader</string>
    <string name="own_app">Capstone: My own app</string>
    <string name="app_title">My Nanodegree Apps!</string>
</resources>
