<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:background="#E1F5FE">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:id="@+id/app_title"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="30dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_app"
            android:id="@+id/first_app"
            android:background="#00BCD4"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:layout_above="@+id/second_app"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_app"
            android:id="@+id/second_app"
            android:background="#00BCD4"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:layout_above="@+id/third_app"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third_app"
            android:id="@+id/third_app"
            android:background="#00BCD4"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"

            android:layout_above="@+id/fourth_app"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fourth_app"
            android:id="@+id/fourth_app"
            android:background="#00BCD4"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:layout_above="@+id/fifth_app"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fifth_app"
            android:id="@+id/fifth_app"
            android:background="#00BCD4"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:layout_above="@+id/own_app"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/own_app"
            android:id="@+id/own_app"
            android:background="#00BCD4"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="128dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>
